--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
-<div id="colorlib-subscribe" class="subs-img" style="background-image: url({{ '/images/img_bg_2.jpg' | relative_url }});" data-stellar-background-ratio="0.5">
+<div id="colorlib-subscribe" class="subs-img" style="background-image: url({{ '/images/img_bg_2.jpg' | relative_url }});"
+    data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -11,18 +12,18 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="row">
                     <div class="col-md-12">
-                    <form class="form-inline qbstp-header-subscribe">
-                        <div class="col-three-forth">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="email" placeholder="Enter your email">
+                        <form class="form-inline qbstp-header-subscribe">
+                            <div class="col-three-forth">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="email" placeholder="Enter your email">
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-one-third">
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-primary">Subscribe Now</button>
+                            <div class="col-one-third">
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-primary">Subscribe Now</button>
+                                </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -34,7 +35,7 @@
         <div class="row row-pb-md">
             <div class="col-md-3 colorlib-widget">
                 <h4>About {{ site.title }}</h4>
-                <p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+                <p>{{ site.tagline }}</p>
                 <p>
                     <ul class="colorlib-social-icons">
                         <li><a href="#twitter"><i class="icon-twitter"></i></a></li>
@@ -60,30 +61,16 @@
 
             <div class="col-md-3 colorlib-widget">
                 <h4>Recent Post</h4>
+                {% for post in site.posts limit:3 %}
                 <div class="f-blog">
-                    <a href="{{ '/blog/' | relative_url }}" class="blog-img" style="background-image: url({{ '/images/blog-1.jpg' | relative_url }});">
+                    <a href="{{ post.url }}" class="blog-img" style="background-image: url('/images/{{ post.image }}');">
                     </a>
                     <div class="desc">
-                        <h2><a href="{{ '/blog/' | relative_url }}">Tips for sexy body</a></h2>
-                        <p class="admin"><span>18 April 2018</span></p>
+                        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                        <p class="admin"><span>{{ post.date | date: "%d %b %Y" }}</span></p>
                     </div>
                 </div>
-                <div class="f-blog">
-                    <a href="{{ '/blog/' | relative_url }}" class="blog-img" style="background-image: url({{ '/images/blog-2.jpg' | relative_url }});">
-                    </a>
-                    <div class="desc">
-                        <h2><a href="{{ '/blog/' | relative_url }}">Tips for sexy body</a></h2>
-                        <p class="admin"><span>18 April 2018</span></p>
-                    </div>
-                </div>
-                <div class="f-blog">
-                    <a href="{{ '/blog/' | relative_url }}" class="blog-img" style="background-image: url({{ '/images/blog-3.jpg' | relative_url }});">
-                    </a>
-                    <div class="desc">
-                        <h2><a href="{{ '/blog/' | relative_url }}">Tips for sexy body</a></h2>
-                        <p class="admin"><span>18 April 2018</span></p>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
 
             <div class="col-md-3 colorlib-widget">
@@ -102,10 +89,15 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p>
-                        <small class="block">&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <a href="https://jekyllrb.com" target="_blank">Jekyll</a> and hosted by <i class="icon-github" aria-hidden="true"></i>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></small><br> 
-                        <small class="block">Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a>, <a href="http://pexels.com/" target="_blank">Pexels</a></small>
+                        <small class="block">&copy;
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;<script>
+                                document.write(new Date().getFullYear());
+                            </script> All rights reserved | This site is made with <a href="https://jekyllrb.com"
+                                target="_blank">Jekyll</a> and hosted by <i class="icon-github" aria-hidden="true"></i>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></small><br>
+                        <small class="block">Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a>, <a
+                                href="http://pexels.com/" target="_blank">Pexels</a></small>
                     </p>
                 </div>
             </div>
