--- a/_sass/css/style.scss
+++ b/_sass/css/style.scss
@@ -251,7 +251,7 @@ h1, h2, h3, h4, h5, h6, figure {
 	}
 	ul {
 		padding: 0;
-		margin: 8px 0 0 0;
+		margin: 0;
 		li {
 			padding: 0;
 			margin: 0;
