--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,10 +38,8 @@
                 <p>{{ site.tagline }}</p>
                 <p>
                     <ul class="colorlib-social-icons">
-                        <li><a href="#twitter"><i class="icon-twitter"></i></a></li>
-                        <li><a href="#facebook"><i class="icon-facebook"></i></a></li>
-                        <li><a href="#linkedin"><i class="icon-linkedin"></i></a></li>
-                        <li><a href="#dribble"><i class="icon-dribbble"></i></a></li>
+                        <li><a href="https://twitter.com/{{ site.twitter }}"><i class="icon-twitter"></i></a></li>
+                        <li><a href="https://fb.me/{{ site.facebook }}"><i class="icon-facebook"></i></a></li>
                     </ul>
                 </p>
             </div>
