--- a/_sass/css/style.scss
+++ b/_sass/css/style.scss
@@ -231,9 +231,13 @@ h1, h2, h3, h4, h5, h6, figure {
 
 	}
 	#colorlib-logo {
+		background-image: url(../images/brand.png);
+		overflow-y: visible;
+		margin:-35px;
+		padding:35px;
+		background-repeat: no-repeat;
+		background-size: contain;
 		font-size: 24px;
-		margin: 0;
-		padding: 0;
 		text-transform: uppercase;
 		font-weight: 900;
 		a{
