--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
 						<div class="col-md-9 text-right menu-1">
 							<ul>
 								<li><a href="{{ '/' | relative_url }}">Home</a></li>
+								<li><a href="{{ '/about/' | relative_url }}">About Us</a></li>
 								<li class="has-dropdown">
 									<a href="{{ '/classes/' | relative_url }}">Classes</a>
 									<ul class="dropdown">
@@ -30,13 +31,10 @@
 										<li><a href="#body-building">Body Building</a></li>
 									</ul>
 								</li>
-								<li><a href="{{ '/schedule/' | relative_url }}">Schedule</a></li>
-								<li><a href="{{ '/trainers/' | relative_url }}">Trainers</a></li>
+								<li><a href="{{ '/trainers/' | relative_url }}">Personal Training</a></li>
+								<li><a href="{{ '/schedule/' | relative_url }}">Results on the Go</a></li>
 								<li><a href="{{ '/events/' | relative_url }}">Events</a></li>
-								<li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
 								<li><a href="{{ '/contact/' | relative_url }}">Contact</a></li>
-								<li class="btn-cta"><a href="{{ '/#' | relative_url }}"><span><i
-												class="icon-cart"></i></span></a></li>
 							</ul>
 						</div>
 					</div>
