--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<div id="colorlib-subscribe" class="subs-img" style="background-image: url({{ '/images/img_bg_2.jpg' | relative_url }});"
-    data-stellar-background-ratio="0.5">
+<div id="colorlib-subscribe" class="subs-img"
+    style="background-image: url({{ '/images/img_bg_2.jpg' | relative_url }});" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -12,7 +12,7 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="row">
                     <div class="col-md-12">
-                        <form class="form-inline qbstp-header-subscribe">
+                        <form id="{{ site.ifttt.mailer_event }}" class="form-inline qbstp-header-subscribe">
                             <div class="col-three-forth">
                                 <div class="form-group">
                                     <input type="text" class="form-control" id="email" placeholder="Enter your email">
@@ -24,6 +24,37 @@
                                 </div>
                             </div>
                         </form>
+                        <script>
+                            window.addEventListener("load", function () {
+                                function sendData() {
+                                    var XHR = new XMLHttpRequest();
+
+                                    var FD = new FormData(form);
+
+                                    XHR.addEventListener("load", function (event) {
+                                        $('#messages').addClass('show');
+                                    });
+
+                                    XHR.addEventListener("error", function (event) {
+                                        $('#messages').addClass('show');
+                                    });
+
+                                    XHR.open("POST",
+                                        "https://maker.ifttt.com/trigger/{{ site.ifttt.mailer_event }}/with/key/{{ site.ifttt.key }}"
+                                    );
+
+                                    XHR.send(FD);
+                                }
+
+                                var form = document.getElementById("{{ site.ifttt.mailer_event }}");
+
+                                form.addEventListener("submit", function (event) {
+                                    event.preventDefault();
+
+                                    sendData();
+                                });
+                            });
+                        </script>
                     </div>
                 </div>
             </div>
@@ -48,7 +79,8 @@
                 <p>
                     <ul class="colorlib-footer-links">
                         <li><a href="{{ '/about/' | relative_url }}"><i class="icon-check"></i> About Us</a></li>
-                        <li><a href="{{ '/testimonials/' | relative_url }}"><i class="icon-check"></i> Testimonials</a></li>
+                        <li><a href="{{ '/testimonials/' | relative_url }}"><i class="icon-check"></i> Testimonials</a>
+                        </li>
                         <li><a href="{{ '/classes/' | relative_url }}"><i class="icon-check"></i> Classes</a></li>
                         <li><a href="{{ '/events/ | relative_url }}"><i class="icon-check"></i> Events</a></li>
                         <li><a href="{{ '/blog/' | relative_url }}"><i class="icon-check"></i> Blog</a></li>
@@ -61,7 +93,8 @@
                 <h4>Recent Post</h4>
                 {% for post in site.categories.blog limit:3 %}
                 <div class="f-blog">
-                    <a href="{{ post.url }}" class="blog-img" style="background-image: url('/images/{{ post.image }}');">
+                    <a href="{{ post.url }}" class="blog-img"
+                        style="background-image: url('/images/{{ post.image }}');">
                     </a>
                     <div class="desc">
                         <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
