--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,16 +21,7 @@
 							<ul>
 								<li><a href="{{ '/' | relative_url }}">Home</a></li>
 								<li><a href="{{ '/about/' | relative_url }}">About Us</a></li>
-								<li class="has-dropdown">
-									<a href="{{ '/classes/' | relative_url }}">Classes</a>
-									<ul class="dropdown">
-										<li><a href="#classes-single">Classes Single</a></li>
-										<li><a href="#cardio">Cardio Classes</a></li>
-										<li><a href="#muscle">Muscle Classes</a></li>
-										<li><a href="#fitness">Fitness Classes</a></li>
-										<li><a href="#body-building">Body Building</a></li>
-									</ul>
-								</li>
+								<li><a href="{{ '/classes/' | relative_url }}">Classes</a></li>
 								<li><a href="{{ '/trainers/' | relative_url }}">Personal Training</a></li>
 								<li><a href="{{ '/schedule/' | relative_url }}">Results on the Go</a></li>
 								<li><a href="{{ '/events/' | relative_url }}">Events</a></li>
