--- a/_includes/classes-include.html
+++ b/_includes/classes-include.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-4 animate-box">
         <div class="classes">
-            <div class="classes-img" style="background-image: url(images/classes-1.jpg);">
+            <div class="classes-img" style="background-image: url(/images/classes-1.jpg);">
                 <span class="price text-center">$25.00<br><small>/month</small></span>
             </div>
             <div class="desc">
@@ -13,7 +13,7 @@
     </div>
     <div class="col-md-4 animate-box">
         <div class="classes">
-            <div class="classes-img" style="background-image: url(images/classes-2.jpg);">
+            <div class="classes-img" style="background-image: url(/images/classes-2.jpg);">
                 <span class="price text-center">$25.00<br><small>/month</small></span>
             </div>
             <div class="desc">
@@ -25,7 +25,7 @@
     </div>
     <div class="col-md-4 animate-box">
         <div class="classes">
-            <div class="classes-img" style="background-image: url(images/classes-3.jpg);">
+            <div class="classes-img" style="background-image: url(/images/classes-3.jpg);">
                 <span class="price text-center">$25.00<br><small>/month</small></span>
             </div>
             <div class="desc">
