change results-on-the-go page url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 								<li><a href="{{ '/about/' | relative_url }}">About Us</a></li>
 								<li><a href="{{ '/classes/' | relative_url }}">Classes</a></li>
 								<li><a href="{{ '/trainers/' | relative_url }}">Personal Training</a></li>
-								<li><a href="{{ '/schedule/' | relative_url }}">Results on the Go</a></li>
+								<li><a href="{{ '/wellness/' | relative_url }}">Results on the Go</a></li>
 								<li><a href="{{ '/events/' | relative_url }}">Events</a></li>
 								<li><a href="{{ '/contact/' | relative_url }}">Contact</a></li>
 							</ul>
