structure post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,4 +2,12 @@
 layout: page
 ---
 
-{{ content }}
+<div id="colorlib-blog">
+    <div class="container">
+        <div class="row">
+            <h2>{{ page.title }}</h2>
+            {{ content }}
+            </div>
+        </div>
+    </div>
+</div>
