--- a/_includes/schedule-include.html
+++ b/_includes/schedule-include.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-        <h2>Our Class Schedule</h2>
+        <h2>Upcoming Progression Courses</h2>
     </div>
 </div>
 <div class="row">
