--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,11 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-3">
-							<div id="colorlib-logo">
-								<a href="{{ '/' | relative_url }}"><span
-										class="sr-only">{{ site.title }}</span>&nbsp;</a>
-							</div>
+							<a href="{{ '/' | relative_url }}"></a>
+								<div id="colorlib-logo">
+									<span class="sr-only">{{ site.title }}</span>&nbsp;
+								</div>
+							</a>
 						</div>
 						<div class="col-md-9 text-right menu-1">
 							<ul>
