--- a/_includes/schedule-include.html
+++ b/_includes/schedule-include.html
@@ -1,7 +1,6 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-        <h2>FREE Small Group Classes:</h2>
-        <h2>Nov 18th - Nov 23rd</h2>
+        <h2>Small Group Classes:</h2>
     </div>
 </div>
 <div class="row">
