--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,8 @@
 								<div id="colorlib-logo">
 									<span class="sr-only">{{ site.title }}</span>&nbsp;
 								</div>
-							</a>
+							</a><br />
+							<span>Boutique Fitness</span>
 						</div>
 						<div class="col-md-9 text-right menu-1">
 							<ul>
