--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 									<span class="sr-only">{{ site.title }}</span>&nbsp;
 								</div>
 							</a><br />
-							<span>Boutique Fitness</span>
+							<span style="font-weight:bold;margin-top:5px;">Boutique Fitness</span>
 						</div>
 						<div class="col-md-9 text-right menu-1">
 							<ul>
