--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
 								<div id="colorlib-logo">
 									<span class="sr-only">{{ site.title }}</span>&nbsp;
 								</div>
+								<div id="colorlib-sub-logo">Boutique Fitness</div>
 							</a>
-							<div style="font-weight:bold;margin-top:5px;">Boutique Fitness</div>
 						</div>
 						<div class="col-md-9 text-right menu-1">
 							<ul>
