--- a/_sass/css/style.scss
+++ b/_sass/css/style.scss
@@ -248,6 +248,10 @@ h1, h2, h3, h4, h5, h6, figure {
 			}
 		}
 	}
+	#colorlib-sub-logo {
+		color: $brand-white;
+		margin:30px;
+	}
 	.menu-1 {
 		@media screen and (max-width: $screen-sm ) {
 			display: none;
