--- a/_sass/css/style.scss
+++ b/_sass/css/style.scss
@@ -250,7 +250,8 @@ h1, h2, h3, h4, h5, h6, figure {
 	}
 	#colorlib-sub-logo {
 		color: $brand-white;
-		margin:30px;
+		margin-top:30px;
+		font-weight: 900;
 	}
 	.menu-1 {
 		@media screen and (max-width: $screen-sm ) {
