--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 								<div id="colorlib-logo">
 									<span class="sr-only">{{ site.title }}</span>&nbsp;
 								</div>
-								<div id="colorlib-sub-logo">Boutique Fitness</div>
+								<div id="colorlib-sub-logo">BOUTIQUE FITNESS</div>
 							</a>
 						</div>
 						<div class="col-md-9 text-right menu-1">
